test/data/semantic-errors/newIndent.bool
if x == 3:
  1

if x:
  1

fun x (a:int b:int):
  a + b
  ret a + b

fun x (a:int b:int):
  ret a + b

fun y (a:int):
  if (tru):
    ret 1
